# tensorpool

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: instances.md
examples/: README.md
examples/cuda-vector-add/: README.md  tp.config.toml  vector-add.cu
examples/deepseek-finetuning/: README.md
examples/deepseekr1-finetuning/: README.md  requirements.txt  train.py
examples/kokoro-tts-inference/: README.md  main.py  tp-config.toml  tp.config.toml
examples/llama3-inference/: README.md  main.py  tp-config.toml  tp.config.toml
examples/mnist/: README.md  mnist.py  requirements.txt  tp-config.toml  tp.config.toml
examples/ollama/: ollama-test.py  tp.config.toml
examples/stable-diffusion-inference/: README.md  main.py  requirements.txt
examples/tp-pull_cifar10/: README.md  cifar_10.py  requirements.txt
examples/triton-vector-add/: tp-config.toml  vector-add.py
examples/ultravox_demo/: create_config.py  dataset_prep.py  requirements.txt  tp.config_A100.toml  tp.config_H100.toml
skills/tensorpool/: SKILL.md
src/tensorpool/: __init__.py  helpers.py  main.py  spinner.py
