[project]
name = "tensorpool"
version = "0.0.3"
description = "TensorPool https://tensorpool.dev/"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.32.3", "tqdm>=4.67.1", "websockets>=13.1"]
authors = [{ name = "Joshua Martinez", email = "joshua@tensorpool.dev" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]

[project.scripts]
tensorpool = "tensorpool.main:main"
tp = "tensorpool.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["ruff>=0.9.3", "pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]

# [[tool.uv.index]]
# name = "pypi"
# url = "https://api.pyx.dev/simple/pypi"
